@@ -35,6 +35,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29703: Fix asyncio to support instantiation of new event loops
+  in child processes.
+
 - bpo-29376: Fix assertion error in threading._DummyThread.is_alive().
 
 - bpo-29110: Fix file object leak in aifc.open() when file is given as a
